--- a/MyPic/src/main/res/layout/activity_main.xml
+++ b/MyPic/src/main/res/layout/activity_main.xml
@@ -8,13 +8,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <SurfaceView
+    <cl.returnvoid.mypic.PreviewCamera
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:id="@+id/preview"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            />
+    />
 
     <Button
             android:layout_width="64dp"
