--- a/MyPic/src/main/res/layout/activity_main.xml
+++ b/MyPic/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,15 +6,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical">
 
     <LinearLayout
             android:id="@+id/preview_camera_container"
             android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="206dp"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentBottom="false"
             android:layout_alignParentTop="true">
     </LinearLayout>
 
@@ -24,6 +25,15 @@
             android:id="@+id/shutter"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/camera"/>
+            android:background="@drawable/camera"
+            android:layout_gravity="center"
+            />
 
-</RelativeLayout>
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Disparar"
+            android:id="@+id/shutter_button"
+            android:layout_gravity="center"/>
+
+</LinearLayout>
