--- a/MyPic/src/main/res/layout/activity_process_image.xml
+++ b/MyPic/src/main/res/layout/activity_process_image.xml
@@ -8,9 +8,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ProcessImageActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
+    <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/image"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:adjustViewBounds="true"
+            android:layout_alignParentEnd="false"
+            android:scaleType="fitCenter"/>
 </RelativeLayout>
