--- a/MyPic/src/main/res/values/styles.xml
+++ b/MyPic/src/main/res/values/styles.xml
@@ -16,5 +16,8 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    <style name="Orange_Button">
+        <item name="android:background">#ff8800</item>
+    </style>
 
 </resources>
