--- a/MyPic/src/main/res/layout/activity_main.xml
+++ b/MyPic/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
     <Button
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:id="@+id/shutter"
+            android:id="@+id/init_app_button"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
             android:background="@drawable/camera"
