--- a/MyPic/src/main/res/layout/activity_process_image.xml
+++ b/MyPic/src/main/res/layout/activity_process_image.xml
@@ -10,11 +10,38 @@
 
     <ImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:id="@+id/image"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:adjustViewBounds="true"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentLeft="false"
+            android:adjustViewBounds="false"
             android:layout_alignParentEnd="false"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitStart"
+            />
+
+    <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:layout_alignParentEnd="false"
+            android:id="@+id/linearLayout"
+            android:layout_below="@+id/image"
+            android:layout_alignLeft="@+id/image">
+
+        <Button
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:text="@string/apply_effect_label_button"
+                android:id="@+id/apply_effect"
+                style="@style/Orange_Button"
+                />
+
+        <Button
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:text="@string/apply_text_label_button"
+                android:id="@+id/button"
+                style="@style/Orange_Button"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 </RelativeLayout>
