--- a/MyPic/src/main/res/layout/activity_preview_camera.xml
+++ b/MyPic/src/main/res/layout/activity_preview_camera.xml
@@ -1,27 +1,6 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".PreviewCameraActivity">
-
-    <fragment
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:name="cl.returnvoid.mypic.fragments.PreviewCameraFragment"
-            android:id="@+id/preview_camera_fragment"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            tools:layout="@layout/fragment_preview_camera"/>
-
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/shutter_button"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/yellow_button_active"/>
-</RelativeLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent" android:layout_height="match_parent">
+    <fragment class="cl.returnvoid.mypic.fragments.PreviewCameraFragment"
+              android:id="@+id/titles"
+              android:layout_width="match_parent" android:layout_height="match_parent" />
+</FrameLayout>
