--- a/MyPic/src/main/res/layout/fragment_preview_camera.xml
+++ b/MyPic/src/main/res/layout/fragment_preview_camera.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+        >
 
 
     <view class="cl.returnvoid.mypic.fragments.PreviewCameraFragment$PreviewCamera"
@@ -12,5 +13,14 @@
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentBottom="true"></view>
+
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/shutter_button"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="122dp"/>
 
 </RelativeLayout>
