--- a/MyPic/src/main/res/layout/activity_preview_camera.xml
+++ b/MyPic/src/main/res/layout/activity_preview_camera.xml
@@ -1,6 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent" android:layout_height="match_parent">
-    <fragment class="cl.returnvoid.mypic.fragments.PreviewCameraFragment"
-              android:id="@+id/titles"
-              android:layout_width="match_parent" android:layout_height="match_parent" />
-</FrameLayout>
+<RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:name="cl.returnvoid.mypic.fragments.PreviewCameraFragment"
+            android:id="@+id/preview_camera_fragment"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
+</RelativeLayout>
