--- a/MyPic/src/main/res/layout/fragment_preview_camera.xml
+++ b/MyPic/src/main/res/layout/fragment_preview_camera.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
         >
 
 
-    <view class="cl.returnvoid.mypic.fragments.PreviewCameraFragment$PreviewCamera"
-          android:layout_width="match_parent"
-          android:layout_height="fill_parent"
-          android:id="@+id/preview"
-          android:layout_alignParentTop="true"
-          android:layout_alignParentLeft="true"
-          android:layout_alignParentBottom="true"></view>
-
-    <Button
+    <view
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/shutter_button"
+            class="cl.returnvoid.mypic.fragments.PreviewCameraFragment$PreviewCamera"
+            android:id="@+id/preview_camera_view"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="122dp"/>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"/>
 
+    <Button
+            android:layout_width="74dp"
+            android:layout_height="74dp"
+            android:id="@+id/shutter_button"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/yellow_button_active"/>
 </RelativeLayout>
